tests/should_fail/syntax_let_void_assign.nv
module main

// SHOULD FAIL: let variable assigned void expression
fn noop() {}
let x = noop()
println(x)
